# Arduino_Emulator

./: .gitignore  CMakeLists.txt  README.md  constants_and_types.cpp  main.cpp  main_linux.cpp  main_windows.cpp  serial.cpp  serial_linux.cpp  serial_windows.cpp  test.cpp  the_string.cpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  linux_test.cpp  windows_test.cpp
